--- a/Randomization_simulation_methods/Randomization.bib
+++ b/Randomization_simulation_methods/Randomization.bib
@@ -154,6 +154,15 @@
   original_id = "3154d38c-98ee-09d6-b910-2d5db2013a92"
 }
 
+@MISC{Amabile1989-pf,
+  title       = "Against all odds inside statistics",
+  author      = "Amabile, Teresa",
+  publisher   = "Annenberg/CPB Collection; Intellimation [distributor]",
+  year        =  1989,
+  keywords    = "Module - Randomization;Quantitative Methods",
+  original_id = "d6afabeb-5756-0421-94a3-407472185c27"
+}
+
 @ARTICLE{Brauer2002-ks,
   title       = "Genetic algorithms and parallel processing in
                  maximum-likelihood phylogeny inference",
@@ -282,7 +291,7 @@
               which require the optimization of user defined objective
               functions. (This paper contains animations that can be viewed
               using the Adobe Acrobat PDF viewer.)",
-  journal  = "Journal of Statistical Software, Articles",
+  journal  = "Journal of Statistical Software",
   volume   =  53,
   number   =  4,
   pages    = "1--37",
