--- a/Randomization_simulation_methods/3.3-PP_in_R.qmd
+++ b/Randomization_simulation_methods/3.3-PP_in_R.qmd
@@ -162,7 +162,7 @@ stopCluster(cl)
 
 ## Converting a loop for parallelization
 
-Notice that we don't use `ii` in the function.
+Notice that we don't use `ii` in the function. It's there for "accounting" later on.
 
 ```{r}
 #| echo: true
