--- a/Randomization_simulation_methods/Randomization.bib
+++ b/Randomization_simulation_methods/Randomization.bib
@@ -303,9 +303,9 @@
 }
 
 @ARTICLE{Mebane2011-vy,
-  title    = "Genetic Optimization Using Derivatives: The rgenoud Package for
+  title    = "Genetic optimization using derivatives: The rgenoud package for
               {R}",
-  author   = "Mebane, Jr., Walter and Sekhon, Jasjeet",
+  author   = "Mebane, Jr, Walter and Sekhon, Jasjeet",
   abstract = "genoud is an R function that combines evolutionary algorithm
               methods with a derivative-based (quasi-Newton) method to solve
               difficult optimization problems. genoud may also be used for
@@ -407,7 +407,7 @@
 }
 
 @ARTICLE{Sekhon1998-hs,
-  title    = "Genetic Optimization Using Derivatives",
+  title    = "Genetic optimization using derivatives",
   author   = "Sekhon, Jasjeet S and Mebane, Walter R",
   abstract = "[We describe a new computer program that combines evolutionary
               algorithm methods with a derivative-based, quasi-Newton method to
@@ -525,6 +525,23 @@
   issn     = "0016-6731",
   pmid     = "9071603",
   pmc      = "PMC1207814"
+}
+
+@ARTICLE{Bengtsson2021-su,
+  title     = "A unifying framework for parallel and distributed processing in
+               {R} using futures",
+  author    = "Bengtsson, Henrik",
+  journal   = "R Journal",
+  publisher = "The R Foundation",
+  volume    =  13,
+  number    =  2,
+  pages     = "208",
+  year      =  2021,
+  url       = "https://journal.r-project.org/archive/2021/RJ-2021-048/index.html",
+  keywords  = "Module - Randomization",
+  language  = "en",
+  issn      = "2073-4859",
+  doi       = "10.32614/rj-2021-048"
 }
 
 @BOOK{Sisson2018-ke,
